--- a/tags_overview/semantic_tags.html
+++ b/tags_overview/semantic_tags.html
@@ -13,7 +13,6 @@
     <!-- LINKS -->
     <p>
         Check out this awesome
-        <!---->
         <a target="_blank" href="https://www.youtube.com/watch?v=HtUH9z_Oey8">
             song
         </a> !
@@ -24,7 +23,7 @@
     <!-- IMAGES -->
     <img src="https://placekitten.com/g/200/300" alt="a kitten" ></img>
 
-    <!-- Images in Text-->
+    <!-- IMAGES FLOW IN TEXT BECAUSE display: inline-->
     <p>Value proposition partnership direct mailing customer low hanging fruit marketing ecosystem technology validation. Equity analytics research & development churn rate seed money traction monetization
         niche market startup iPhone angel investor business-to-business. Twitter long tail return on investment ownership research & development crowdsource churn rate mass market customer iPad supply chain. Hypotheses venture supply chain burn rate.
         Scrum project pivot seed <img src="https://placekitten.com/g/50/50"> round client monetization validation bootstrapping. partnership direct mailing customer low hanging fruit marketing ecosystem technology validation. Equity analytics research & development churn rate seed money traction monetization
@@ -45,7 +44,7 @@
     <br>
     <a href="tel:+499123456789">01234 56789</a>
 
-
+    <!-- PUT MEANING TO WORDS -->
     <p>
         <strong>Equity analytics</strong> research & development churn rate seed money traction monetization niche market startup iPhone angel investor business-to-business.
         <br> <em>Twitter long</em> tail return on investment ownership research & development crowdsource churn rate mass market customer iPad supply chain.
