add image comment

--- a/wednesday/navigation/index.html
+++ b/wednesday/navigation/index.html
@@ -65,7 +65,10 @@
 
         <main>
             <h1 id="heading">Home</h1>
-            <img src="https://picsum.photos/300/100" alt="a kitten" >
+            <!-- Add an image!
+                change the width and height for numbers,
+                e.g. 300/100 and get a random placeholder image :) -->
+            <!-- <img src="https://picsum.photos/width/height" alt="a kitten" > -->
 
         </main>
 
