--- a/tags_overview/semantic_tags.html
+++ b/tags_overview/semantic_tags.html
@@ -10,6 +10,7 @@
     <h1>Semantic HTML</h1>
 
     <br><br><br>
+    <a href="lists_and_tables.html">My link</a>
     <!-- LINKS -->
     <p>
         Check out this awesome
@@ -18,10 +19,11 @@
         </a> !
     </p>
 
-    <a href="#my-custom-id">This links to he Heading with the ID: my-custom-id</a>
+    <a href="#my-custom-id">
+        <img src="https://placekitten.com/g/200/300" alt="a kitten" >
+    </a>
 
     <!-- IMAGES -->
-    <img src="https://placekitten.com/g/200/300" alt="a kitten" ></img>
 
     <!-- IMAGES FLOW IN TEXT BECAUSE display: inline-->
     <p>Value proposition partnership direct mailing customer low hanging fruit marketing ecosystem technology validation. Equity analytics research & development churn rate seed money traction monetization
