--- a/tags_overview/structural_tags.html
+++ b/tags_overview/structural_tags.html
@@ -7,10 +7,10 @@
 
 <body>
 
-
-
     <!-- HEADINGS -->
-    <h1>Heading 1</h1><h2>Heading numero 2</h2><h3>All good things are 3</h3>
+    <h1>Heading 1</h1>
+    <h2>Heading numero 2</h2>
+    <h3>All good things are 3</h3>
     <h4>But 4 is more and more is better</h4>
     <h5>Can I get a high 5?</h5>
     <h6>How many beers fit in a 6-pack?</h6>
@@ -22,10 +22,12 @@
 
     <p>(Just as many as there are types of headings!)</p>
 
+    <!-- Closing shlash can be ommited in self-closing tags -->
     <hr>
     <hr/>
+
     <!-- Structural Tags for styling Tags -->
-    <p>Value proposition partnership direct mailing customer low hanging fruit marketing ecosystem technology validation.
+    <p><span style="font-weight: bold; font-style: italic; ">Value proposition</span> partnership direct mailing customer low hanging fruit marketing ecosystem technology validation.
         <br> <b>Equity analytics</b> research & development churn rate seed money traction monetization niche market startup iPhone angel investor business-to-business.
         <br> <i>Twitter long</i> tail return on investment ownership research & development crowdsource churn rate mass market customer iPad supply chain.
         <br> Hypotheses venture supply chain burn rate with H<sub>2</sub>O.
@@ -33,9 +35,11 @@
         <br> Infrastructure handshake partner network user experience disruptive churn rate equity.
         <br> <div style="color:red">First mover advantage</div> growth hacking paradigm shift angel investor gen-z iPad scrum project partnership innovator business model canvas gamification. Infographic crowdsource business model canvas.
     </p>
-<p>another p tag</p>
+
+    <p>another p tag</p>
+
     <div>
-        <p style="height:200px">hello world</p>
+        <p style="">hello world</p>
     </div>
 
 </body>
