--- a/wednesday/project/index.html
+++ b/wednesday/project/index.html
@@ -52,8 +52,7 @@
               <h2 class="title"><span class="date">Sep - Dec 2019 </span> | Code Camp Leipzig</h2>
               <h3 class="role">Student + Donut Provider</h3>
               <div class="project-description">
-                <p>
-                    For the duration of three months I have been an avid student at the Code Camp Leipzig, School of Coding and Party-making,
+                <p>For the duration of three months I have been an avid student at the Code Camp Leipzig, School of Coding and Party-making,
                     and completed the ultimate Front-End Web Developer Bootcamp.<br><br>
                     We came together in a group of 12 passionate people from past backgrounds you only heard about in your dreams: 
                     Dragon Slayer, Rocket Scientist or Advocate for weird "Hack"-Videos on Social Media, only to name a few.
