--- a/wednesday/project/index.html
+++ b/wednesday/project/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <meta charset="UTF-8" />
     <title>CV</title>
     <style>
@@ -14,65 +14,81 @@
         color: #313639;
       }
       section {
-          margin: 40px;
+        margin: 40px;
       }
       h3 {
         /*why is text-decoration: underline; not cool?*/
         border-bottom: 1px solid black;
       }
       .date {
-          font-size: 16px;
+        font-size: 16px;
       }
       .small-text {
-          font-size: 10px;
-          text-decoration: underline;
+        font-size: 10px;
+        text-decoration: underline;
       }
       .tech-item-title {
-          background-color: #313639;
-          color: #fffff2;
-          padding: 0px 5px;
+        background-color: #313639;
+        color: #fffff2;
+        padding: 2px 5px;
+        border-radius: 5px;
       }
       ul.technologie-list {
         /*Let's make the bullet points cooler!!*/
         /* list-style-type: decimal-leading-zero; */
       }
       .technologie-list li {
-          margin-bottom: 4px;
+        margin-bottom: 5px;
       }
-
     </style>
   </head>
   <body>
     <main>
       <section>
-        <div class="timeline-item">
-          <article class="project">
-            <!-- project post -->
-            <div class="project-post">
-              <h2 class="title"><span class="date">Sep - Dec 2019 </span> | Code Camp Leipzig</h2>
-              <h3 class="role">Student + Donut Provider</h3>
-              <div class="project-description">
-                <p>For the duration of three months I have been an avid student at the Code Camp Leipzig, School of Coding and Party-making,
-                    and completed the ultimate Front-End Web Developer Bootcamp.<br><br>
-                    We came together in a group of 12 passionate people from past backgrounds you only heard about in your dreams: 
-                    Dragon Slayer, Rocket Scientist or Advocate for weird "Hack"-Videos on Social Media, only to name a few.
-                </p>
-              </div>
-            </div>
+        <article class="project">
+          <h2 class="title">
+            <span class="date">Sep - Dec 2019 </span> | Code Camp Leipzig
+          </h2>
+          <h3 class="role">Student + Donut Provider</h3>
+          <p class="project-description">
+            For the duration of three months I have been an avid student at the
+            Code Camp Leipzig, School of Coding and Party-making, and completed
+            the ultimate Front-End Web Developer Bootcamp.<br /><br />
+            We came together in a group of 12 passionate people from past
+            backgrounds you only heard about in your dreams: Dragon Slayer,
+            Rocket Scientist or Advocate for weird "Hack"-Videos on Social
+            Media, only to name a few.
+          </p>
 
-            <!-- project technologies -->
-            <div class="project-technologies">
-              <h3 class="technologies-title">Technologies developed during the Bootcamp</h3>
-              <ul class="technologie-list">
-                  <li><span class="tech-item-title">CoffeeSlurp.js</span> - new JavaScript Library for them ☕️ slurpers</li>
-                  <li><span class="tech-item-title">_Pizza_Destroyer.exe</span> - the perfect progr@mm to eat away all the 🍕</li>
-                  <li><span class="tech-item-title">__C@T__</span> - just <span class="small-text">underscoreunderscore</span>C@T<span class="small-text">underscoreunderscore</span></li>
-                  <li><span class="tech-item-title">🔥hYp3R-HyPeR🔥-Campaign</span> - make HyperText 🔥hYpEr🔥 again!</li>
-                  <li><span class="tech-item-title">Donut Provider</span> - Sideproject to ensure the students are happy 🍩</li>
-                </ul>
-            </div>
-          </article>
-        </div>
+          <h3 class="technologies-title">
+            Technologies developed during the Bootcamp
+          </h3>
+          <ul class="technologie-list">
+            <li>
+              <span class="tech-item-title">coffeeSlurp.js</span> - new
+              JavaScript Library for them ☕️ slurpers
+            </li>
+            <li>
+              <span class="tech-item-title">_Pizza_Destroyer.exe</span> - the
+              perfect progr@mm to eat away all the 🍕
+            </li>
+            <li>
+              <span class="tech-item-title">__C@T__</span> - just
+              <span class="small-text">underscoreunderscore</span>C@T<span
+                class="small-text"
+                >underscoreunderscore</span
+              >
+            </li>
+            <li>
+              <span class="tech-item-title">🔥hYp3R-HyPeR🔥-Campaign</span> -
+              make HyperText 🔥hYpEr🔥 again!
+            </li>
+            <li>
+              <span class="tech-item-title">Donut Provider</span> - Sideproject
+              to ensure the students are happy 🍩
+            </li>
+          </ul>
+        </article>
       </section>
     </main>
   </body>
