change bullet points

--- a/wednesday/project/index.html
+++ b/wednesday/project/index.html
@@ -35,7 +35,7 @@
       }
       ul.technologie-list {
         /*Let's make the bullet points cooler!!*/
-        /* list-style-type: decimal-leading-zero; */
+        list-style-type: decimal-leading-zero;
       }
       .technologie-list li {
         margin-bottom: 5px;
