--- a/thursday/menu.html
+++ b/thursday/menu.html
@@ -25,11 +25,42 @@
       .container {
         max-width: 600px;
         margin: 15px auto;
-        /* Here comes the magic */
 
+        /* Here comes the magic */
+        display: grid;
+        grid-gap: 5px;
+        /* grid-template-columns: 200px 200px 200px; */
+        grid-template-columns: repeat(3, 200px);
+        grid-template-rows: 170px 68px 170px 140px 196px;
       }
+
       .container div {
           border: 1px solid var(--black);
+      }
+
+      .breakfast_menu {
+        grid-column: 2 / 4;
+        grid-row: 1 / 4;
+      }
+      .whitespace {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+      }
+      .juice_heading {
+        grid-column: 3 / 4;
+        grid-row: 4 / 5;
+      }
+      .juice_menu {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+      }
+      .hotdrinks_heading {
+        grid-column: 1 / 2;
+        grid-row: 5 / 6;
+      }
+      .hotdrinks_menu {
+        grid-row : 5 / 6;
+        grid-column: 2 / 4;
       }
   </style>
   <body>
@@ -61,7 +92,7 @@
           <li>Tea <span>2.35</span></li>
         </ul>
       </div>
-      <div class="whitespace"></div>
+      <div class="whitespace">whitespace</div>
     </div>
   </body>
 </html>
