--- a/thursday/flexbox.html
+++ b/thursday/flexbox.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
     <style>
-      /*BASIC SETUP FOR A PRETTY PAGE*/
 
+      /*BASIC SETUP FOR A PRETTY PAGE*/
       :root {
         --yellow: #ff9e00;
         --black: #272727;
@@ -43,7 +43,11 @@
       .item {
           /*Center Number*/
 
-
+        width: 100px;
+        height:100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         font-size: 35px;
         border-radius: 10px;
         background-color: var(--yellow);
@@ -52,6 +56,8 @@
 
       .container {
           /*Let's FLEX!*/
+          display: flex;
+          justify-content: space-around;
       }
     </style>
   </head>
